# transcribe

./: .gitignore  BurnSubtiles.py  CONFIG.json  DownloadYoutubeVideos.py  GenerateSubtitles.py  README.md  TODO.MD  TranslateSubtitles.py  convert_videos.py  download_youtube_videos.py  hello.py  install.sh  make_exe.bat  make_zip.sh  py_run_transcribe.bat  py_run_translate.bat  pyproject.toml  remove_duplicates.py  requirements.txt  run_GenerateSubtitles.bat  run_TranslateSubtitles.bat  run_transcribe_server.bat  run_transcribe_server.spec  run_translate_subtitles_server.bat  show_teatime.py  split_media_by_srt.py  test.py  testmarian.py  testspeechbrain.py  to-simplified.py  transcribe - Copy.py  transcribe.py  transcribe.pyw  transcribe.spec  transcribe_2_subtitles.py  transcribe_gui.py  transcribe_gui.spec  transcribe_py.bat  transcribe_server.bat  translate_subtitles.py  (+3 more)
.devcontainer/: Dockerfile  devcontainer.json  install_dependencies.sh
downloads/: README.txt  urls.txt
downloads/subs/: README.txt
misc/: README.MD
