[project]
name = "transcribe"
version = "1.1.0"
description = "Transcription tool for media filesfiles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chinese-converter",
    "pathvalidate",
    "pinyin-jyutping",
    "pysrt",
    "python-dateutil>=2.9.0.post0",
    "pytube",
    "requests",
    "speechrecognition",
    "torch",
    "transformers",
    "translators",
    "soundfile",
]
